# toy-rms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  poe_tasks.toml  pyproject.toml  ruff.toml  ty.toml
assets/: banner.typ  logo.typ
data-loader/: load_option_prices.py
src/toy_rms/: __init__.py
src/toy_rms/data-loader/: __init__.py  load_option_prices.py
src/toy_rms/data_loader/: load_option_prices.py
src/toy_rms/data_storage/: __init__.py  tables.py
src/toy_rms/utils/: __init__.py  naming.py
