[project]
    authors         = [{ name = "bwrob", email = "bartosz.marcin.wroblewski@gmail.com" }]
    dependencies    = [
    "pandas>=3.0.1",
    "yfinance>=1.2.0",
]
    description     = "Add your description here"
    name            = "toy-rms"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"

    [project.scripts]
        toy-rms = "toy_rms:main"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.10.6,<0.11.0"]

[dependency-groups]
dev = [
    "complexipy>=5.2.0",
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "poethepoet>=0.42.1",
    "ty>=0.0.19",
]
